--- a/NLW/Styles/main.css
+++ b/NLW/Styles/main.css
@@ -27,9 +27,9 @@ largura, altura, espaçamento, preenchimento, bordas, cor,
 fundo, posicionamento, alinhamento maneira que é vista pelo html (display)
 */
 #page-home {
-    height: 100vh;
+    height: 105vh;
     background: url('../extras-aula-1/icones/home-background.svg') no-repeat;
-    background-position: 35vh bottom ;
+    background-position: 35vw bottom ;
 }
 
 #page-home .content{
@@ -89,8 +89,7 @@ fundo, posicionamento, alinhamento maneira que é vista pelo html (display)
     margin-top: 40px;
     background-color: var(--primary-color);
     transition: 400ms;
-    font-weight: bold;
-    color: white;
+    
 }
 #page-home main a:hover{
     background-color: #2fb86e;
@@ -98,5 +97,40 @@ fundo, posicionamento, alinhamento maneira que é vista pelo html (display)
 #page-home main a span{
     width: 72px;
     height: 72px;
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
     background-color: rgba(0, 0, 0, 0.08);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+#page-home main a span:after{
+    content: "";
+    background-image: url('../extras-aula-1/icones/search.svg');
+    width: 20px;
+    height: 20px;
+}
+
+#page-home main a strong{
+    flex: 1;
+    color: white;
+    text-align: center;
+}
+@media(max-width: 900px){
+    #page-home{
+        background-position-x: 70vw;
+    }
+    #page-home .content{
+        align-items: center;
+        text-align: center;
+    }
+    #page-home header a{
+        position: absolute;
+        bottom: 48px;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+    #page-home main{
+        align-items: center;
+    }
 }
