--- a/NLW/Styles/create-point.css
+++ b/NLW/Styles/create-point.css
@@ -136,6 +136,10 @@ form button:hover{
     color: var(--title-color);
 }
 
-items-grid li.selected{
+.items-grid li.selected{
     background: #e1faec;
+    border: 2px solid #34cb79;
+}
+.items-grid li img, .items-grid li span{
+    pointer-events: none;
 }
