--- a/NLW/Styles/create-point.css
+++ b/NLW/Styles/create-point.css
@@ -58,7 +58,7 @@ form .field-group{
      display: flex;
  }
 form input, form select{
-    background-color: #f0f0f5;
+    background-color: var(--second-color);
 
     border: 0;
     padding: 16px 24px;
