--- a/NLW/Styles/main.css
+++ b/NLW/Styles/main.css
@@ -1,6 +1,8 @@
 :root{
     --title-color: #322153;
     --primary-color: #34cb79;
+    --second-color: #f0f0f5;
+
 }
 *{
     margin: 0;
@@ -11,7 +13,7 @@ html {
     font-family: Roboto, sans-serif;
 }
 body{
-    background: #f0f0f5;
+    background: var(--second-color);
     -webkit-font-smoothing: antialiased;
 }
 a{
