--- a/NLW/Styles/search-results.css
+++ b/NLW/Styles/search-results.css
@@ -35,7 +35,7 @@ body::after{
     
  }
 main{
-    margin-top: 48px;
+    margin: 48px;
 }
 
 main h4{
@@ -51,10 +51,12 @@ main .cards{
 
     gap: 24px;
 }
-main .cards img{
+main .card img{
 
     width: 100%;
     height: 150px;
+
+    object-fit: cover;
 
     border-radius: 8px 8px 0 0;
 }
