--- a/NLW/src/views/create-point.html
+++ b/NLW/src/views/create-point.html
@@ -18,7 +18,7 @@
 
         <header>
             <img src="icones/logo.svg" alt="Logomarca">
-            <a href="index.html">
+            <a href="/">
                 <span></span>
                 Voltar para home
             </a>
@@ -77,22 +77,22 @@
                     <h1>Itens de Coleta</h1>
                     <div class="items-grid">
                         <li data-id="1">
-                            <img src="/NLW/icones/lampadas.svg" alt="Lampadas"><span>Lampada</span>
+                            <img src="/icones/lampadas.svg" alt="Lampadas"><span>Lampada</span>
                         </li>
                         <li data-id="2">
-                            <img src="/NLW/icones/baterias.svg" alt="Pilhas e Baterias"><span>Pilhas e Baterias</span>
+                            <img src="/icones/baterias.svg" alt="Pilhas e Baterias"><span>Pilhas e Baterias</span>
                         </li>
                         <li data-id="3">
-                            <img src="/NLW/icones/papeis-papelao.svg" alt="Papeis e Papelão"><span>Papeis e Papelão</span>
+                            <img src="/icones/papeis-papelao.svg" alt="Papeis e Papelão"><span>Papeis e Papelão</span>
                         </li>
                         <li data-id="4">
-                            <img src="/NLW/icones/eletronicos.svg" alt="Residuos Eletrônicos"><span>Residuos Eletrônicos</span>
+                            <img src="/icones/eletronicos.svg" alt="Residuos Eletrônicos"><span>Residuos Eletrônicos</span>
                         </li>
                         <li data-id="5">
-                            <img src="/NLW/icones/organicos.svg" alt="Resíduos organicos"><span>Resíduos Organicos</span>
+                            <img src="/icones/organicos.svg" alt="Resíduos organicos"><span>Resíduos Organicos</span>
                         </li>
                         <li data-id="6">
-                            <img src="/NLW/icones/oleo.svg" alt="Oleo de cozinha"><span>Oléo de cozinha</span>
+                            <img src="/icones/oleo.svg" alt="Oleo de cozinha"><span>Oléo de cozinha</span>
                         </li>
                     </div>
 
@@ -109,7 +109,7 @@
                    
     </div>
     
-    <script src="/NLW/scripts/create-point.js"></script>
+    <script src="/scripts/create-point.js"></script>
 
 </body>
 </html>
