--- a/NLW/src/views/index.html
+++ b/NLW/src/views/index.html
@@ -21,7 +21,7 @@
 
            <header>
                <img src="icones/logo.svg" alt="Logomarca">
-               <a href="create-point.html">
+               <a href="/create-point">
                     <span></span>
                     Cadastre um ponto de coleta
                 </a>
@@ -46,7 +46,7 @@
                 <h1>Pontos de coleta</h1>
                 <a href = "#">Fechar</a>
             </div>
-            <form action="search-results.html">
+            <form action="search-results">
                 <label for="search">Cidade</label>
                 <div class="search field">
                     <input type="text" name="search" placeholder="Pesquise por cidade">
@@ -57,6 +57,6 @@
             </form>
         </div>
     </div>
-    <script src="scripts/index.js"></script>
+    <script src="/scripts/index.js"></script>
 </body>
 </html>
