--- a/NLW/src/views/search-results.html
+++ b/NLW/src/views/search-results.html
@@ -18,7 +18,7 @@
 
         <header>
             <img src="icones/logo.svg" alt="Logomarca">
-            <a href="index.html">
+            <a href="/">
                 <span></span>
                 Voltar para home
             </a>
