--- a/NLW/src/views/index.html
+++ b/NLW/src/views/index.html
@@ -1,62 +1,43 @@
-<!DOCTYPE html>
-<html lang="pt_br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ecoleta</title>
-    
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
-    
+{% extends "layout.html" %}
 
-    <link rel="stylesheet" href="Styles/main.css">
+{% set pageId = "page-home" %}
+
+{% block styles %}
     <link rel="stylesheet" href="Styles/home.css">
     <link rel="stylesheet" href="Styles/model.css">
-    <link rel="stylesheet" href="Styles/resposive.css">
+{% endblock styles %}
 
-</head>
-<body>
-    <div id="page-home">
+{% block content %}
+    <div class="content">
 
-        <div class="content">
+        <header>
+            <img src="icones/logo.svg" alt="Logomarca">
+            <a href="/create-point">
+                <span></span>
+                Cadastre um ponto de coleta
+            </a>
+        </header>
 
-           <header>
-               <img src="icones/logo.svg" alt="Logomarca">
-               <a href="/create-point">
-                    <span></span>
-                    Cadastre um ponto de coleta
-                </a>
-           </header>
+        <main>
 
-           <main>
+            <h1>Seu marketplace de coleta de resíduos</h1>
 
-               <h1>Seu marketplace de coleta de resíduos</h1>
-    
-               <p>Ajudamos pessoas a encontrarem pontos de coleta de forma eficiente</p>
-               <a href="#"><span></span><strong>Pesquisa pontos de coleta</strong> </a>
+            <p>Ajudamos pessoas a encontrarem pontos de coleta de forma eficiente</p>
+            <a href="#">
+                <span></span>
+                <strong>Pesquisa pontos de coleta</strong>
+            </a>
 
-           </main>
-           
-    
-        </div>
+        </main>
+
     </div>
 
-    <div id="modal"  class="hide">
-        <div class="content">
-            <div class="header">
-                <h1>Pontos de coleta</h1>
-                <a href = "#">Fechar</a>
-            </div>
-            <form action="search-results">
-                <label for="search">Cidade</label>
-                <div class="search field">
-                    <input type="text" name="search" placeholder="Pesquise por cidade">
-                    <button>
-                        <img src="icones/search.svg" alt="Buscar">
-                    </button>
-                </div>
-            </form>
-        </div>
-    </div>
+{% endblock content %}
+
+{% block modal %}
+    {% include "partials/modal.html" %}
+{% endblock modal %}
+
+{% block scripts %}
     <script src="/scripts/index.js"></script>
-</body>
-</html>
+{% endblock scripts %}
