--- a/NLW/src/views/create-point.html
+++ b/NLW/src/views/create-point.html
@@ -23,9 +23,16 @@
                     <h2>Dados da entidade</h2>
                 </legend>
 
-                <div class="field">
-                    <label for="name">nome da entidade</label>
-                    <input type="text" name="name" required="required">
+                <div class="field-group">
+                    <div class="field">
+                        <label for="name">nome da entidade</label>
+                        <input type="text" name="name" required="required">
+                    </div>
+
+                    <div class="field">
+                        <label for="name">Imagem da entidade</label>
+                        <input type="url" name="image" placeholder="http://" required="required">
+                    </div>
                 </div>
 
                 <div class="field-group">
@@ -65,7 +72,8 @@
 
             <fieldset>
                 <legend>
-                    <h1>Itens de Coleta</h1>
+                    <h2>Itens de Coleta</h2>
+                    <span>Selecione um ou mais Itens abaixo</span>
                     <div class="items-grid">
                         <li data-id="1">
                             <img src="/icones/lampadas.svg" alt="Lampadas">
