--- a/public/Styles/model.css
+++ b/public/Styles/model.css
@@ -32,7 +32,7 @@
 }
 
 #modal .header a {
-    background-image: url('../icones/x.svg');
+    background-image: url('../assets/x.svg');
    
     width: 20px;
     height: 20px;
