--- a/src/views/index.html
+++ b/src/views/index.html
@@ -8,10 +8,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
     
 
-    <link rel="stylesheet" href="Styles/main.css">
-    <link rel="stylesheet" href="Styles/home.css">
-    <link rel="stylesheet" href="Styles/model.css">
-    <link rel="stylesheet" href="Styles/resposive.css">
+    <link rel="stylesheet" href="../../public/Styles/main.css">
+    <link rel="stylesheet" href="../../public/Styles/home.css">
+    <link rel="stylesheet" href="../../public/Styles/model.css">
+    <link rel="stylesheet" href="../../public/Styles/resposive.css">
 
 </head>
 <body>
@@ -20,7 +20,7 @@
         <div class="content">
 
            <header>
-               <img src="icones/logo.svg" alt="Logomarca">
+               <img src="../../public/assets/logo.svg" alt="Logomarca">
                <a href="create-point.html">
                     <span></span>
                     Cadastre um ponto de coleta
@@ -51,12 +51,12 @@
                 <div class="search field">
                     <input type="text" name="search" placeholder="Pesquise por cidade">
                     <button>
-                        <img src="icones/search.svg" alt="Buscar">
+                        <img src="../../public/assets/search.svg" alt="Buscar">
                     </button>
                 </div>
             </form>
         </div>
     </div>
-    <script src="scripts/index.js"></script>
+    <script src="../../public/scripts/index.js"></script>
 </body>
 </html>
