--- a/src/views/create-point.html
+++ b/src/views/create-point.html
@@ -8,17 +8,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
     
 
-    <link rel="stylesheet" href="../../public/Styles/main.css">
-    <link rel="stylesheet" href="../../public/Styles/create-point.css">
-    <link rel="stylesheet" href="../../public/Styles/resposive.css">
+    <link rel="stylesheet" href="/Styles/main.css">
+    <link rel="stylesheet" href="/Styles/create-point.css">
+    <link rel="stylesheet" href="/Styles/resposive.css">
 
 </head>
 <body>
     <div id="page-create-point">
 
         <header>
-            <img src="../../public/assets/logo.svg" alt="Logomarca">
-            <a href="index.html">
+            <img src="/assets/logo.svg" alt="Logomarca">
+            <a href="/">
                 <span></span>
                 Voltar para home
             </a>
@@ -77,22 +77,22 @@
                     <h1>Itens de Coleta</h1>
                     <div class="items-grid">
                         <li data-id="1">
-                            <img src="../../public/assets/lampadas.svg" alt="Lampadas"><span>Lampada</span>
+                            <img src="/assets/lampadas.svg" alt="Lampadas"><span>Lampada</span>
                         </li>
                         <li data-id="2">
-                            <img src="../../public/assets/baterias.svg" alt="Pilhas e Baterias"><span>Pilhas e Baterias</span>
+                            <img src="/assets/baterias.svg" alt="Pilhas e Baterias"><span>Pilhas e Baterias</span>
                         </li>
                         <li data-id="3">
-                            <img src="../../public/assets/papeis-papelao.svg" alt="Papeis e Papelão"><span>Papeis e Papelão</span>
+                            <img src="/assets/papeis-papelao.svg" alt="Papeis e Papelão"><span>Papeis e Papelão</span>
                         </li>
                         <li data-id="4">
-                            <img src="../../public/assets/eletronicos.svg" alt="Residuos Eletrônicos"><span>Residuos Eletrônicos</span>
+                            <img src="/assets/eletronicos.svg" alt="Residuos Eletrônicos"><span>Residuos Eletrônicos</span>
                         </li>
                         <li data-id="5">
-                            <img src="../../public/assets/organicos.svg" alt="Resíduos organicos"><span>Resíduos Organicos</span>
+                            <img src="/assets/organicos.svg" alt="Resíduos organicos"><span>Resíduos Organicos</span>
                         </li>
                         <li data-id="6">
-                            <img src="../../public/assets/oleo.svg" alt="Oleo de cozinha"><span>Oléo de cozinha</span>
+                            <img src="/assets/oleo.svg" alt="Oleo de cozinha"><span>Oléo de cozinha</span>
                         </li>
                     </div>
 
@@ -109,7 +109,7 @@
                    
     </div>
     
-    <script src="../../public/scripts/create-point.js"></script>
+    <script src="/scripts/create-point.js"></script>
 
 </body>
 </html>
