--- a/src/views/search-results.html
+++ b/src/views/search-results.html
@@ -8,17 +8,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
     
 
-    <link rel="stylesheet" href="../../public/Styles/main.css">
-    <link rel="stylesheet" href="../../public/Styles/search-results.css">
-    <link rel="stylesheet" href="../../public/Styles/resposive.css">
+    <link rel="stylesheet" href="/Styles/main.css">
+    <link rel="stylesheet" href="/Styles/search-results.css">
+    <link rel="stylesheet" href="/Styles/resposive.css">
 
 </head>
 <body>
     <div id="page-search-results">
 
         <header>
-            <img src="../../public/assets/logo.svg" alt="Logomarca">
-            <a href="index.html">
+            <img src="/assets/logo.svg" alt="Logomarca">
+            <a href="/">
                 <span></span>
                 Voltar para home
             </a>
