--- a/src/views/index.html
+++ b/src/views/index.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="/Styles/main.css">
     <link rel="stylesheet" href="/Styles/home.css">
-    <link rel="stylesheet" href="/Styles/model.css">
+    <link rel="stylesheet" href="/Styles/modal.css">
     <link rel="stylesheet" href="/Styles/resposive.css">
 
 </head>
@@ -40,23 +40,8 @@
         </div>
     </div>
 
-    <div id="modal"  class="hide">
-        <div class="content">
-            <div class="header">
-                <h1>Pontos de coleta</h1>
-                <a href = "#">Fechar</a>
-            </div>
-            <form action="search-results.html">
-                <label for="search">Cidade</label>
-                <div class="search field">
-                    <input type="text" name="search" placeholder="Pesquise por cidade">
-                    <button>
-                        <img src="/assets/search.svg" alt="Buscar">
-                    </button>
-                </div>
-            </form>
-        </div>
-    </div>
+    {% include "partials/modal.html" %}
+
     <script src="/scripts/index.js"></script>
 </body>
 </html>
