--- a/src/views/search-results.html
+++ b/src/views/search-results.html
@@ -16,15 +16,8 @@
 <body>
     <div id="page-search-results">
 
-        <header>
-            <img src="/assets/logo.svg" alt="Logomarca">
-            <a href="/">
-                <span></span>
-                Voltar para home
-            </a>
-        </header>
+       {% include "partials/page-header.html" %}
           
-        
         <main>
             <h4>
                 <strong>2 pontos</strong> encontrados
