--- a/src/views/create-point.html
+++ b/src/views/create-point.html
@@ -1,109 +1,109 @@
-<!DOCTYPE html>
-<html lang="pt_br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% extends "layout.html" %}}
+
+{% set pageId = "page-create-point" %}}
+
+{% block title %}
     <title>Criar um ponto de coleta</title>
-    
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
-    
+{% endblock title %}
 
-    <link rel="stylesheet" href="/Styles/main.css">
+{% block styles %}
     <link rel="stylesheet" href="/Styles/create-point.css">
-    <link rel="stylesheet" href="/Styles/resposive.css">
+{% endblock styles %}
 
-</head>
-<body>
-    <div id="page-create-point">
-        
-        {% include "partials/page-header.html" %}
+{% block content %}
+    {% include "partials/page-header.html" %}
 
-        <form action="">
-            <h1>Cadastro do ponto de coleta</h1>
+    <form action="">
+        <h1>Cadastro do ponto de coleta</h1>
 
-            <fieldset>
-                <legend>
-                    <h2>Dados da entidade</h2>
-                </legend>
+        <fieldset>
+            <legend>
+                <h2>Dados da entidade</h2>
+            </legend>
+
+            <div class="field">
+                <label for="name">nome da entidade</label>
+                <input type="text" name="name" required="required">
+            </div>
+
+            <div class="field-group">
+                <div class="field">
+                    <label for="address">Endereço</label>
+                    <input type="text" name="address" required="required">
+                </div>
 
                 <div class="field">
-                    <label for="name">nome da entidade</label>
-                    <input type="text" name="name" required>
+                    <label for="address2">Número/Complemento</label>
+                    <input type="text" name="address2" required="required">
+                </div>
+            </div>
+
+            <div class="field-group">
+
+                <div class="field">
+                    <label for="state">Estado</label>
+                    <select name="uf" required="required">
+                        <option value="">Selecione um Estado</option>
+                    </select>
+
+                    <input type="hidden" name="state">
+
                 </div>
 
-                <div class="field-group">
-                    <div class="field">
-                        <label for="address">Endereço</label>
-                        <input type="text" name="address" required>
-                    </div>
-
-                    <div class="field">
-                        <label for="address2">Número/Complemento</label>
-                        <input type="text" name="address2" required>
-                    </div>
+                <div class="field">
+                    <label for="city">Cidade</label>
+                    <select name="city" disabled="disabled" required="required">
+                        <option value="">Selecione uma Cidade</option>
+                    </select>
                 </div>
 
-                <div class="field-group">
-                    
-                    <div class="field">
-                        <label for="state">Estado</label>
-                        <select name="uf" required>
-                            <option value="">Selecione um Estado</option>
-                        </select>
+            </div>
 
-                        <input type="hidden" name="state">
+        </fieldset>
 
-                    </div>
-                    
-                    <div class="field">
-                        <label for="city">Cidade</label>
-                        <select name="city" disabled required>
-                            <option value="">Selecione uma Cidade</option>
-                        </select>
-                    </div>
-            
+        <fieldset>
+            <legend>
+                <h1>Itens de Coleta</h1>
+                <div class="items-grid">
+                    <li data-id="1">
+                        <img src="/assets/lampadas.svg" alt="Lampadas">
+                        <span>Lampada</span>
+                    </li>
+                    <li data-id="2">
+                        <img src="/assets/baterias.svg" alt="Pilhas e Baterias">
+                        <span>Pilhas e Baterias</span>
+                    </li>
+                    <li data-id="3">
+                        <img src="/assets/papeis-papelao.svg" alt="Papeis e Papelão">
+                        <span>Papeis e Papelão</span>
+                    </li>
+                    <li data-id="4">
+                        <img src="/assets/eletronicos.svg" alt="Residuos Eletrônicos">
+                        <span>Residuos Eletrônicos</span>
+                    </li>
+                    <li data-id="5">
+                        <img src="/assets/organicos.svg" alt="Resíduos organicos">
+                        <span>Resíduos Organicos</span>
+                    </li>
+                    <li data-id="6">
+                        <img src="/assets/oleo.svg" alt="Oleo de cozinha">
+                        <span>Oléo de cozinha</span>
+                    </li>
                 </div>
 
-            </fieldset>
+                <input type="hidden" name="items">
 
-            <fieldset>
-                <legend>
-                    <h1>Itens de Coleta</h1>
-                    <div class="items-grid">
-                        <li data-id="1">
-                            <img src="/assets/lampadas.svg" alt="Lampadas"><span>Lampada</span>
-                        </li>
-                        <li data-id="2">
-                            <img src="/assets/baterias.svg" alt="Pilhas e Baterias"><span>Pilhas e Baterias</span>
-                        </li>
-                        <li data-id="3">
-                            <img src="/assets/papeis-papelao.svg" alt="Papeis e Papelão"><span>Papeis e Papelão</span>
-                        </li>
-                        <li data-id="4">
-                            <img src="/assets/eletronicos.svg" alt="Residuos Eletrônicos"><span>Residuos Eletrônicos</span>
-                        </li>
-                        <li data-id="5">
-                            <img src="/assets/organicos.svg" alt="Resíduos organicos"><span>Resíduos Organicos</span>
-                        </li>
-                        <li data-id="6">
-                            <img src="/assets/oleo.svg" alt="Oleo de cozinha"><span>Oléo de cozinha</span>
-                        </li>
-                    </div>
+            </legend>
+        </fieldset>
 
-                    <input type="hidden" name="items">
+        <button type="submit">
+            Cadastrar ponto de coleta
+        </button>
 
-                </legend>
-            </fieldset>
+    </form>
 
-            <button type="submit">
-                Cadastrar ponto de coleta
-            </button>
+{% endblock content %}
 
-        </form>
-                   
-    </div>
-    
+{% block scripts %}
     <script src="/scripts/create-point.js"></script>
-
-</body>
-</html>
+{% endblock scripts %}
