--- a/src/views/index.html
+++ b/src/views/index.html
@@ -1,49 +1,39 @@
-{}
+{% extends "layout.html" %}}
 
-<!DOCTYPE html>
-<html lang="pt_br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ecoleta</title>
-    
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Ubuntu:wght@700&display=swap" rel="stylesheet">
-    
+{% set pageId = "page-home" %}}
 
-    <link rel="stylesheet" href="/Styles/main.css">
+{% block styles %}
     <link rel="stylesheet" href="/Styles/home.css">
     <link rel="stylesheet" href="/Styles/modal.css">
-    <link rel="stylesheet" href="/Styles/resposive.css">
+{% endblock styles %}
 
-</head>
-<body>
-    <div id="page-home">
+{% block content %}
+    <div class="content">
+        <header>
+            <img src="/assets/logo.svg" alt="Logomarca">
+            <a href="/create-point">
+                <span></span>
+                Cadastre um ponto de coleta
+            </a>
+        </header>
 
-        <div class="content">
+        <main>
 
-           <header>
-               <img src="/assets/logo.svg" alt="Logomarca">
-               <a href="/create-point">
-                    <span></span>
-                    Cadastre um ponto de coleta
-                </a>
-           </header>
+            <h1>Seu marketplace de coleta de resíduos</h1>
 
-           <main>
+            <p>Ajudamos pessoas a encontrarem pontos de coleta de forma eficiente</p>
+            <a href="#"><span></span><strong>Pesquisa pontos de coleta</strong> </a>
 
-               <h1>Seu marketplace de coleta de resíduos</h1>
-    
-               <p>Ajudamos pessoas a encontrarem pontos de coleta de forma eficiente</p>
-               <a href="#"><span></span><strong>Pesquisa pontos de coleta</strong> </a>
-
-           </main>
-           
-    
-        </div>
+        </main>
     </div>
 
-    {% include "partials/modal.html" %}
+{% endblock content %}
+ 
 
+{% block modal %}
+    {% include "partials/modal.html" %}
+{% endblock modal %}
+
+{% block scripts %}
     <script src="/scripts/index.js"></script>
-</body>
-</html>
+{% endblock scripts %}
