--- a/src/views/create-point.html
+++ b/src/views/create-point.html
@@ -21,10 +21,23 @@
                 <h2>Dados da entidade</h2>
             </legend>
 
-            <div class="field">
+            <div class="field-group">
+
+                <div class="field">
+                    <label for="name">nome da entidade</label>
+                    <input type="text" name="name" required="required">
+                </div>
+
+                <div class="field">
+                    <label for="name">Imagem da entidade</label>
+                    <input type="url" name="image" placeholder="https://" required="required">
+                </div>
+            </div>
+
+            {#<div class="field">
                 <label for="name">nome da entidade</label>
                 <input type="text" name="name" required="required">
-            </div>
+            </div>#}
 
             <div class="field-group">
                 <div class="field">
@@ -63,37 +76,39 @@
 
         <fieldset>
             <legend>
-                <h1>Itens de Coleta</h1>
-                <div class="items-grid">
-                    <li data-id="1">
-                        <img src="/assets/lampadas.svg" alt="Lampadas">
-                        <span>Lampada</span>
-                    </li>
-                    <li data-id="2">
-                        <img src="/assets/baterias.svg" alt="Pilhas e Baterias">
-                        <span>Pilhas e Baterias</span>
-                    </li>
-                    <li data-id="3">
-                        <img src="/assets/papeis-papelao.svg" alt="Papeis e Papelão">
-                        <span>Papeis e Papelão</span>
-                    </li>
-                    <li data-id="4">
-                        <img src="/assets/eletronicos.svg" alt="Residuos Eletrônicos">
-                        <span>Residuos Eletrônicos</span>
-                    </li>
-                    <li data-id="5">
-                        <img src="/assets/organicos.svg" alt="Resíduos organicos">
-                        <span>Resíduos Organicos</span>
-                    </li>
-                    <li data-id="6">
-                        <img src="/assets/oleo.svg" alt="Oleo de cozinha">
-                        <span>Oléo de cozinha</span>
-                    </li>
-                </div>
-
-                <input type="hidden" name="items">
-
+                <h2>Itens de Coleta</h2>
+                <span>selecione um ou mais itens abaixo</span>
             </legend>
+
+            <div class="items-grid">
+                <li data-id="1">
+                    <img src="/assets/lampadas.svg" alt="Lampadas">
+                    <span>Lampada</span>
+                </li>
+                <li data-id="2">
+                    <img src="/assets/baterias.svg" alt="Pilhas e Baterias">
+                    <span>Pilhas e Baterias</span>
+                </li>
+                <li data-id="3">
+                    <img src="/assets/papeis-papelao.svg" alt="Papeis e Papelão">
+                    <span>Papeis e Papelão</span>
+                </li>
+                <li data-id="4">
+                    <img src="/assets/eletronicos.svg" alt="Residuos Eletrônicos">
+                    <span>Residuos Eletrônicos</span>
+                </li>
+                <li data-id="5">
+                    <img src="/assets/organicos.svg" alt="Resíduos organicos">
+                    <span>Resíduos Organicos</span>
+                </li>
+                <li data-id="6">
+                    <img src="/assets/oleo.svg" alt="Oleo de cozinha">
+                    <span>Oléo de cozinha</span>
+                </li>
+            </div>
+
+            <input type="hidden" name="items">
+
         </fieldset>
 
         <button type="submit">
