--- a/public/Styles/home.css
+++ b/public/Styles/home.css
@@ -1,13 +1,7 @@
-/*Box model
-Modelo de caixa
-Toda caixa tem 
-largura, altura, espaçamento, preenchimento, bordas, cor,
-fundo, posicionamento, alinhamento maneira que é vista pelo html (display)
-*/
 #page-home {
     height: 100vh;
-    background: url('../assets/home-background.svg') no-repeat;
-    background-position: 35vw bottom ;
+    background: url('../assets/home-background2.png') no-repeat;
+    background-position: 40vw bottom ;
 }
 
 #page-home .content{
