--- a/public/Styles/modal.css
+++ b/public/Styles/modal.css
@@ -88,3 +88,15 @@
 #modal form button:hover{
     background-color: #22ffbb;
 }
+
+/*page modal point created*/
+#modal.point .content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;  
+}
+
+#modal.point h1{
+    color: white;
+    margin-top: 32px;
+}
