--- a/src/views/create-point.html
+++ b/src/views/create-point.html
@@ -8,12 +8,13 @@
 
 {% block styles %}
     <link rel="stylesheet" href="/Styles/create-point.css">
+    <link rel="stylesheet" href="/Styles/modal.css">
 {% endblock styles %}
 
 {% block content %}
     {% include "partials/page-header.html" %}
 
-    <form action="">
+    <form action="/savepoint" method="POST">
         <h1>Cadastro do ponto de coleta</h1>
 
         <fieldset>
@@ -81,27 +82,27 @@
             </legend>
 
             <div class="items-grid">
-                <li data-id="1">
+                <li data-id="Lampada">
                     <img src="/assets/lampadas.svg" alt="Lampadas">
                     <span>Lampada</span>
                 </li>
-                <li data-id="2">
+                <li data-id="Pilhas e Baterias">
                     <img src="/assets/baterias.svg" alt="Pilhas e Baterias">
                     <span>Pilhas e Baterias</span>
                 </li>
-                <li data-id="3">
+                <li data-id="Papeis e Papelão">
                     <img src="/assets/papeis-papelao.svg" alt="Papeis e Papelão">
                     <span>Papeis e Papelão</span>
                 </li>
-                <li data-id="4">
+                <li data-id="Residuos Eletrônicos">
                     <img src="/assets/eletronicos.svg" alt="Residuos Eletrônicos">
                     <span>Residuos Eletrônicos</span>
                 </li>
-                <li data-id="5">
+                <li data-id="Resíduos Organicos">
                     <img src="/assets/organicos.svg" alt="Resíduos organicos">
                     <span>Resíduos Organicos</span>
                 </li>
-                <li data-id="6">
+                <li data-id="Oléo de cozinha">
                     <img src="/assets/oleo.svg" alt="Oleo de cozinha">
                     <span>Oléo de cozinha</span>
                 </li>
@@ -118,6 +119,12 @@
     </form>
 
 {% endblock content %}
+
+{% block modal %}
+    {% if saved %}
+        {% include "partials/point-created.html" %}
+    {%  endif %}
+{% endblock modal %}
 
 {% block scripts %}
     <script src="/scripts/create-point.js"></script>
